# beziers.py

./: .buildinfo  .gitignore  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  publish-release.yml  test.yml
_sources/source/: beziers.rst.txt  modules.rst.txt
beziers/: affinetransformation.py  boundingbox.py  cubicbezier.py  line.py  point.py  quadraticbezier.py  segment.py
beziers/path/: __init__.py  geometricshapes.py
beziers/path/representations/: GSPath.py  Nodelist.py  Segment.py  fontparts.py
beziers/utils/: __init__.py  alphashape.py  arclengthmixin.py  booleanoperationsmixin.py  curvedistance.py  curvefitter.py  intersectionsmixin.py  linesweep.py  pens.py  samplemixin.py
doc/: Makefile  conf.py  index.rst
doc/source/: beziers.path.representations.rst  beziers.path.rst  beziers.rst
source/: beziers.html  beziers.path.html  beziers.path.representations.html  modules.html
src/beziers/: boundingbox.py  cubicbezier.py  line.py  point.py  quadraticbezier.py
src/beziers/path/: __init__.py
src/beziers/utils/: __init__.py  alphashape.py  arclengthmixin.py  booleanoperationsmixin.py  curvedistance.py  curvefitter.py  legendregauss.py  (+2 more)
test/: cubic.py  curvefit.py  distance.py  intersections.py  path.py  quadratic.py  test_arclength.py  test_booleanshapeoperations.py  test_bounds.py  test_corners.py  test_cubic.py  test_curvefit.py  test_intersections.py  test_line.py  test_offset.py  test_path.py  test_quadratic.py  test_transformation.py
(+2 files in other folders)
