[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beziers"
dynamic = ["version"]
description = "Bezier curve manipulation library"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Simon Cozens", email = "simon@simon-cozens.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyclipper",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/beziers/_version.py"
git_describe_command = "git describe --match 'v*' --tags"
